# p2

./: CMakeLists.txt  Motion.h  SensorCommunication.cpp  SensorCommunication.h  SensorConfiguration.cpp  SensorConfiguration.h  SensorTag.cpp  SensorTag.h  main.cpp
